complete the app mostly

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,12 @@
 
     <include layout="@layout/ui_flashlight"/>
     <include layout="@layout/ui_warning_light"/>
-    <include layout="@layout/ui_main"/>
+    <include layout="@layout/ui_main" />
+    <include layout="@layout/ui_morse"/>
+    <include layout="@layout/ui_bulb"/>
+    <include layout="@layout/ui_colorlight"/>
+    <include layout="@layout/ui_policelight"/>
+    <include layout="@layout/ui_settings"/>
 
         <ImageView
             android:id="@+id/imageview_controller"
